--- a/app/images/stack/sprite.stack.html
+++ b/app/images/stack/sprite.stack.html
@@ -109,13 +109,19 @@ They might well be outsourced to an external stylesheet of course.
  .svg-arrows-left-dims { width: 25px; height: 21px; }
  .svg-arrows-right-dims { width: 25px; height: 21px; }
  .svg-logo-dims { width: 168px; height: 280px; }
- .svg-map-dims { width: 1001px; height: 496px; }
  .svg-map-marker-dims { width: 11px; height: 14px; }
+ .svg-map2-dims { width: 1001px; height: 496px; }
+ .svg-minus-dims { width: 14px; height: 4px; }
  .svg-nav-ico-1-dims { width: 61px; height: 48px; }
  .svg-nav-ico-2-dims { width: 52px; height: 33px; }
  .svg-nav-ico-3-dims { width: 47px; height: 48px; }
  .svg-nav-ico-4-dims { width: 25px; height: 52px; }
+ .svg-plus-dims { width: 14px; height: 14px; }
  .svg-search-dims { width: 24px; height: 24px; }
+ .svg-star-dims { width: 54px; height: 54px; }
+ .svg-surf-icon-dims { width: 40px; height: 25px; }
+ .svg-water-icon-dims { width: 19px; height: 25px; }
+ .svg-wind-icon-dims { width: 26px; height: 24px; }
 </style>
 
 <!--
@@ -168,17 +174,23 @@ selector is used to show the very shape that is referenced by the fragment ident
                     </div>
                     <h2>logo, </h2>
                 </li>
-             <li title="map">
-                    <div class="icon-box">
-                        <img src="../sprite.svg#map" class="svg-map-dims" alt="map">
-                    </div>
-                    <h2>map, </h2>
-                </li>
              <li title="map-marker">
                     <div class="icon-box">
                         <img src="../sprite.svg#map-marker" class="svg-map-marker-dims" alt="map-marker">
                     </div>
                     <h2>map-marker, </h2>
+                </li>
+             <li title="map2">
+                    <div class="icon-box">
+                        <img src="../sprite.svg#map2" class="svg-map2-dims" alt="map2">
+                    </div>
+                    <h2>map2, </h2>
+                </li>
+             <li title="minus">
+                    <div class="icon-box">
+                        <img src="../sprite.svg#minus" class="svg-minus-dims" alt="minus">
+                    </div>
+                    <h2>minus, </h2>
                 </li>
              <li title="nav-ico-1">
                     <div class="icon-box">
@@ -204,11 +216,41 @@ selector is used to show the very shape that is referenced by the fragment ident
                     </div>
                     <h2>nav-ico-4, </h2>
                 </li>
+             <li title="plus">
+                    <div class="icon-box">
+                        <img src="../sprite.svg#plus" class="svg-plus-dims" alt="plus">
+                    </div>
+                    <h2>plus, </h2>
+                </li>
              <li title="search">
                     <div class="icon-box">
                         <img src="../sprite.svg#search" class="svg-search-dims" alt="search">
                     </div>
                     <h2>search, </h2>
+                </li>
+             <li title="star">
+                    <div class="icon-box">
+                        <img src="../sprite.svg#star" class="svg-star-dims" alt="star">
+                    </div>
+                    <h2>star, </h2>
+                </li>
+             <li title="surf-icon">
+                    <div class="icon-box">
+                        <img src="../sprite.svg#surf-icon" class="svg-surf-icon-dims" alt="surf-icon">
+                    </div>
+                    <h2>surf-icon, </h2>
+                </li>
+             <li title="water-icon">
+                    <div class="icon-box">
+                        <img src="../sprite.svg#water-icon" class="svg-water-icon-dims" alt="water-icon">
+                    </div>
+                    <h2>water-icon, </h2>
+                </li>
+             <li title="wind-icon">
+                    <div class="icon-box">
+                        <img src="../sprite.svg#wind-icon" class="svg-wind-icon-dims" alt="wind-icon">
+                    </div>
+                    <h2>wind-icon, </h2>
                 </li>
          </ul>
 
@@ -218,7 +260,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
         </section>
         <footer>
-            <p>Generated at Thu, 26 Sep 2024 20:45:51 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+            <p>Generated at Wed, 02 Oct 2024 21:40:44 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
         </footer>
     </body>
 </html>
