--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -5,6 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.min.css">
-	<script type="module" src="js/main.min.js" defer></script>
+	<script src="js/main.min.js" defer></script>
 </head>
 <body>
