--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -1,5 +1,15 @@
 
-<footer></footer>
+<footer class="footer">
+    <a href="#" class="btn1">
+      Go <span>Surf</span>
+    </a>
+
+    <div class="copy">
+      © Go-Surf 2018. All Rights Reserved.
+    </div>
+
+</footer>
+
 <noscript>
   <link rel="stylesheet" href="css/noscript/noscript-styles.css">
 </noscript>
