--- a/app/tips.html
+++ b/app/tips.html
@@ -1,7 +1,7 @@
 <picture>
     <source srcset="images/myimage.avif" type="image/avif">
     <source srcset="images/myimage.webp" type="image/webp">
-    <img src="images/myimage.jpg" alt="myimage">
+    <img src="images/myimage.jpg" alt="myimage" loading="lazy">
 </picture>
 
 /* Фолбэк — используется обычный формат (например, jpg) */
